Return the refernced objects in _ref

Both gconf_entry_ref() and gconf_change_set_ref() don't return
the referenced objects but nothing (void), which causes issues for
g_boxed_copy which uses the return value.

https://bugzilla.gnome.org/show_bug.cgi?id=629984